Add flags for windows installer creation